Ajustes de endpoints de solicitacoes
